--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,11 +14,10 @@ add_executable(pk1_pruefung main.cpp
         engine/movement/piece_movements.h
         engine/movement/piece_movements.cpp
         engine/misc/move.h
-        engine/misc/PieceType.h
-        engine/misc/PieceType.cpp
+        engine/misc/piece.h
+        engine/misc/piece.cpp
         engine/chess_bot.cpp
         engine/chess_bot.h
-        tests/perft.cpp
 )
 
 include(FetchContent)
@@ -29,3 +28,24 @@ FetchContent_Declare(
 # For Windows: Prevent overriding the parent project's compiler/linker settings
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
+
+# Add your test source file
+add_executable(tests tests/tests.cpp
+        engine/board.cpp
+        engine/board.h
+        engine/movement/move_gen.cpp
+        engine/movement/move_gen.h
+        engine/movement/piece_movements.h
+        engine/movement/piece_movements.cpp
+        engine/misc/move.h
+        engine/misc/piece.h
+        engine/misc/piece.cpp
+        engine/chess_bot.cpp
+        engine/chess_bot.h
+)
+
+# Link the Google libraries to your test executable
+target_link_libraries(tests GTest::gtest_main)
+
+include(GoogleTest)
+gtest_discover_tests(tests)
