--- a/engine/Makefile
+++ b/engine/Makefile
@@ -8,8 +8,8 @@ LD_FLAGS = -L /usr/local/lib -l pthread
 OBJECTS = chess_game.o chess_bot.o board.o move_gen.o piece.o main.o
 TARGET = ChessGame
 
-vpath move_gen.cpp ./engine/movement
-vpath piece.cpp ./engine/misc
+vpath move_gen.cpp ./movement
+vpath piece.cpp ./misc
 
 all: $(TARGET)
 
