--- a/engine/Makefile
+++ b/engine/Makefile
@@ -5,11 +5,10 @@ G++ = g++
 G++_FLAGS = -std=c++17 -c -Wall -Wextra -Wpedantic -O3
 LD_FLAGS = -L /usr/local/lib -l pthread
 
-OBJECTS = chess_game.o chess_bot.o board.o move_gen.o piece.o main.o
+OBJECTS = chess_game.o chess_bot.o board.o move_gen.o main.o
 TARGET = ChessGame
 
 vpath move_gen.cpp ./movement
-vpath piece.cpp ./misc
 
 all: $(TARGET)
 
