--- a/tests/Makefile
+++ b/tests/Makefile
@@ -8,14 +8,13 @@ G++ = g++
 G++_FLAGS = -std=c++17 -c -Wall -Wextra -Wpedantic -O3 -I $(GOOGLE_TEST_INCLUDE)
 LD_FLAGS = -L /usr/local/lib -l $(GOOGLE_TEST_LIB) -l pthread
 
-OBJECTS = chess_game.o chess_bot.o board.o move_gen.o piece.o tests.o
+OBJECTS = chess_game.o chess_bot.o board.o move_gen.o tests.o
 TARGET = Test
 
 vpath chess_game.cpp ../engine
 vpath chess_bot.cpp ../engine
 vpath board.cpp ../engine
 vpath move_gen.cpp ../engine/movement
-vpath piece.cpp ../engine/misc
 
 all: $(TARGET)
 
