Added a transposition table to my iterative deepening. Started adding the move to the table and sorting all moves now.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ add_executable(pk1_pruefung engine/main.cpp
         engine/misc/player.h
         engine/exceptions/fen_exception.h
         engine/exceptions/board_exception.h
+        engine/misc/zobrist.h
 )
 
 include(FetchContent)
